Day_4_CloudFormation/template1.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description:
  'Cybertek Image CloudFormation Template'

Resources:

  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: 't2.micro'
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      ImageId: 'ami-0600ada9f2792ef9c'

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '1000'
          ToPort: '1000'
          CidrIp: 0.0.0.0/0
          Description: 'HR ORDS'
        - IpProtocol: tcp
          FromPort: '8000'
          ToPort: '8000'
          CidrIp: 0.0.0.0/0
          Description: 'FOR SPARTAN APP'
        - IpProtocol: tcp
          FromPort: '1521'
          ToPort: '1521'
          CidrIp: 0.0.0.0/0
          Description: 'FOR ORACLE DB'
        - IpProtocol: tcp
          FromPort: '7000'
          ToPort: '7000'
          CidrIp: 0.0.0.0/0
          Description: 'FOR SPARTAN APP WITH AUTH'
        - IpProtocol: tcp
          FromPort: '8081'
          ToPort: '8081'
          CidrIp: 0.0.0.0/0
          Description: 'FOR Jenkins'
      

Outputs:
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicIp]
  InstanceId:
    Description: Spartan App With No Auth URL
    Value: !Ref 'EC2Instance'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicDnsName]
